[package]
name = "amm-pinocchio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "initializer_ix_bench"
path = "bench/initializer_ix_bench.rs"
harness = false

[[bench]]
name = "add_liquidity_ix_bench"
path = "bench/add_liquidity_ix_bench.rs"
harness = false

[[bench]]
name = "swap_ix_bench"
path = "bench/swap_ix_bench.rs"
harness = false

[[bench]]
name = "withdraw_ix_bench"
path = "bench/withdraw_ix_bench.rs"
harness = false


[dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
pinocchio = { version = "0.10.2", features = ["cpi"] }
solana-address = { version = "2", features = ["curve25519"] }
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-bencher = "0.10.3"
solana-sdk = "3.0.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
